# mad-hatter

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  commit.sh  rename.sh
.github/workflows/: codeql.yml  linux.yml  macos.yml  windows.yml
benchmarks/epfl/: epfl.suite
benchmarks/iscas/: iscas.suite
benchmarks/iwls/: iwls.suite
databases/asap7/: asap7_area_4.v
diagnostics/: CMakeLists.txt
diagnostics/rinox/: diagnostics.hpp
experiments/: CMakeLists.txt  experiments.hpp
experiments/common/: CMakeLists.txt  context.cpp  context.hpp  env.hpp  git_info.hpp  parser.cpp  parser.hpp  writer.hpp
experiments/common/baseline/mapping/: tech_map.cpp  tech_map.hpp
experiments/common/baseline/preprocessing/: aig_opto.cpp  aig_opto.hpp
experiments/common/rinox/opto/algorithms/: resynthesis.hpp
experiments/resynthesis/: config.json  main.cpp  parser.hpp  resynthesis.json
experiments/studies/databases/map_pclasses/: config.json  main.txt  parser.txt
experiments/studies/resynthesis/area/high_effort/: config.json  main.cpp  report.json
include/mad_hatter/: mad_hatter.hpp  traits.hpp
include/mad_hatter/analyzers/analyzers_utils/: switching.hpp
include/mad_hatter/analyzers/evaluators/: evaluators.hpp  power_evaluator.hpp
include/mad_hatter/analyzers/trackers/: arrival_times_tracker.hpp  gate_load_tracker.hpp  required_times_tracker.hpp  sensing_times_tracker.hpp  topo_sort_tracker.hpp
include/mad_hatter/boolean/: permutation.hpp  simd.hpp  simd_operations.hpp  spfd.hpp  symmetry.hpp
include/mad_hatter/databases/: database_generator.hpp  database_manager.hpp  mapped_database.hpp
include/mad_hatter/dependency/: dependency.hpp  dependency_cut.hpp  rewire_dependencies.hpp  struct_dependencies.hpp  window_dependencies.hpp
include/mad_hatter/evaluation/: boolean_chains.hpp  chain_simulator.hpp  chains.hpp  evaluation.hpp
include/mad_hatter/evaluation/chains/: bound_chain.hpp  mig_boolean_chain.hpp  mig_chain.hpp  muxig_boolean_chain.hpp  muxig_chain.hpp  xag_boolean_chain.hpp  xag_chain.hpp
include/mad_hatter/io/verilog/: verilog.hpp  verilog_parser.hpp  verilog_reader.hpp  write_verilog.hpp
include/mad_hatter/libraries/: augmented_library.hpp  libraries.hpp
include/mad_hatter/math/: math.hpp
include/mad_hatter/network/: network.hpp  signal_map.hpp  storage_network.hpp  storage_node.hpp  storage_signal.hpp  tfo_manager.hpp  utils.hpp
include/mad_hatter/networks/: networks.hpp  networks_utils.hpp
include/mad_hatter/opto/algorithms/: resynthesize.hpp
include/mad_hatter/opto/evaluators/: area_evaluator.hpp  delay_evaluator.hpp  evaluators_utils.hpp
include/mad_hatter/opto/profilers/: area_profiler.hpp  delay_profiler.hpp  power_profiler.hpp  profilers_utils.hpp
include/mad_hatter/power/: power.hpp  power_evaluator.hpp  switching.hpp
include/mad_hatter/synthesis/: lut_decomposer.hpp  synthesis.hpp  xaig_decompose.hpp
include/mad_hatter/trackers/: arrival_times_tracker.hpp  gate_load_tracker.hpp  required_times_tracker.hpp  sensing_times_tracker.hpp  topo_sort_tracker.hpp  trackers.hpp
include/mad_hatter/windowing/: window_manager.hpp  window_manager.txt  window_simulator.hpp
include/rinox/: mad_hatter.hpp  traits.hpp
include/rinox/analyzers/analyzers_utils/: switching.hpp
include/rinox/analyzers/evaluators/: evaluators.hpp  power_evaluator.hpp
include/rinox/analyzers/trackers/: arrival_times_tracker.hpp  gate_load_tracker.hpp  required_times_tracker.hpp  sensing_times_tracker.hpp  topo_sort_tracker.hpp  trackers.hpp
include/rinox/boolean/: boolean.hpp  permutation.hpp  simd.hpp  spfd.hpp  support_minimizer.hpp  symmetry.hpp  truth.hpp
include/rinox/databases/: database_generator.hpp  database_manager.hpp  databases.hpp  mapped_database.hpp
include/rinox/dependency/: dependency.hpp  dependency_cut.hpp  rewire_dependencies.hpp  struct_dependencies.hpp  window_dependencies.hpp
include/rinox/evaluation/: chain_simulator.hpp  chains.hpp
include/rinox/evaluation/chains/: bound_chain.hpp  mig_chain.hpp  muxig_chain.hpp  xag_chain.hpp
include/rinox/io/: diagnostics.hpp
include/rinox/io/json/: json.hpp  json_parser.hpp  json_stream.hpp  json_writer.hpp
include/rinox/io/utils/: reader.hpp  (+1 more)
include/rinox/libraries/: augmented_library.hpp
include/rinox/math/: math.hpp
include/rinox/network/: converter.hpp  converters.hpp  network.hpp  signal_map.hpp  storage_network.hpp  storage_node.hpp  storage_signal.hpp  tfo_manager.hpp  utils.hpp
include/rinox/synthesis/: lut_decomposer.hpp  synthesis.hpp  xaig_decompose.hpp
include/rinox/windowing/: window_manager.hpp  window_manager.txt  window_simulator.hpp
src/: cli_commands.cpp  cli_commands.hpp  cli_context.hpp  cli_repl.cpp  cli_repl.hpp  main.cpp
src/cli/: commands.cpp  commands.hpp  context.hpp  main.cpp  repl.cpp  repl.hpp
src/cli/commands/: libraries.cpp  libraries.hpp
techlib/: README.md
techno/genlib/: README.md
test/: CMakeLists.txt  evaluation.cpp  network.cpp  synthesis.cpp
test/boolean/: simd.cpp  simd_operations.cpp
test/cli/: cli.cpp
test/databases/: database_manager.cpp  mapped_database.cpp
test/dependency/: struct_dependencies.cpp
test/evaluation/: chain_simulator.cpp
test/io/verilog/: verilog_reader.cpp
test/synthesis/: xaig_decompose.cpp
test/unit/: evaluation.cpp  network.cpp  power.cpp  simd.cpp  synthesis.cpp  trackers.cpp
test/unit/analyzers/: trackers.cpp
test/unit/databases/: database_manager.cpp  mapped_database.cpp
test/unit/dependency/: rewire_dependencies.cpp  struct_dependencies.cpp  window_dependencies.cpp
test/unit/io/: json.cpp  verilog.cpp
test/unit/io/verilog/: verilog_reader.cpp
test/unit/opto/algorithms/: area_resynthesis.cpp  delay_resynthesis.cpp  delay_resynthesis.txt  power_resynthesis.cpp
test/unit/opto/evaluators/: area_evaluator.cpp
test/unit/opto/profilers/: area_profiler.cpp
test/unit/params/: params.cpp
test/unit/synthesis/: lut_synthesis.cpp  xaig_synthesis.cpp
test/unit/windowing/: window_manager.cpp  window_simulator.cpp
test/windowing/: window_manager.cpp  window_simulator.cpp
(+19 files in other folders)
